2001-11-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (is_8bit_word_encoded): Make into a macro, we
	don't need to do a strlen because the atom is a GString which
	means we have it's length already. This also saves us some
	overhead of calling a function.
	(g_mime_utils_8bit_header_decode): Update to pass the len argument
	to is_8bit_word_encoded.

2001-11-18  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Bumped version to 0.7.3

	* gmime-param.c: GMimeParam is now a linked list of parameters
	rather than a single name/value pair.
	(g_mime_param_new_from_string): Now returns a parameter list based
	on the input string rather than only returning a single parameter
	name/value pair. Also updated to handle rfc2184 encoded
	parameters.
	(g_mime_param_destroy): Destroy the linked list of params.
	(g_mime_param_append): Append a new parameter.
	(g_mime_param_append_param): Append a new parameter object.
	(g_mime_param_write_to_string): New function (which replaces
	g_mime_param_to_string) which correctly encodes (either by quoting
	the value or rfc2184 encoding it) the list of parameters and
	optionally folds them suitable for header wrapping.

	* gmime-disposition.[c,h]: New sources files to handle
	parsing/generating Content-Disposition headers.

	* gmime-part.c (g_mime_part_destroy): Updated to use
	g_mime_disposition_destroy.
	(g_mime_part_set_content_disposition_object): New function for
	setting the disposition object on a mime part.
	(g_mime_part_set_content_disposition): Updated to use
	g_mime_disposition_set.
	(g_mime_part_get_content_disposition): Updated to use
	g_mime_disposition_get.
	(g_mime_part_add_content_disposition_parameter): Updated to use
	g_mime_disposition_add_parameter.
	(g_mime_part_get_content_disposition_parameter): Updated to use
	g_mime_disposition_get_parameter.
	(g_mime_part_set_filename): Updated to use
	g_mime_disposition_add_parameter.
	(g_mime_part_get_filename): Updated to use
	g_mime_disposition_get_parameter.
