@@ -24,6 +24,7 @@ libgmime_la_SOURCES = 		\
 	gmime-filter.c		\
 	gmime-filter-basic.c	\
 	gmime-filter-crlf.c	\
+	gmime-filter-from.c	\
 	gmime-filter-html.c	\
 	gmime-header.c		\
 	gmime-message.c		\
@@ -52,6 +53,7 @@ gmimeinclude_HEADERS = 		\
 	gmime-filter.h		\
 	gmime-filter-basic.h	\
 	gmime-filter-crlf.h	\
+	gmime-filter-from.h	\
 	gmime-filter-html.h	\
 	gmime-header.h		\
 	gmime-message.h		\
