@@ -44,6 +44,7 @@
 #include "gmime-filter.h"
 #include "gmime-filter-basic.h"
 #include "gmime-filter-crlf.h"
+#include "gmime-filter-from.h"
 #include "gmime-filter-html.h"
 
 /* GMIME version */
